# Scada

./: CMakeLists.txt  journal.txt
configs/: device_config.json
qml/: main.qml
src/: main.cpp
src/config/: DeviceConfigLoader.cpp  DeviceConfigLoader.h
src/core/: Tag.cpp  Tag.h  TagManager.cpp  TagManager.h
src/device/: Device.cpp  Device.h  DeviceConfig.h  DeviceManager.cpp  DeviceManager.h
src/modbus/: ModbusClient.cpp  ModbusClient.h
src/model/: DeviceListModel.cpp  DeviceListModel.h  DeviceViewModel.cpp  DeviceViewModel.h
src/plc/: PlcEngine.cpp  PlcEngine.h
src/simulation/: SensorSimulator.cpp  SensorSimulator.h  SimulatorManager.cpp  SimulatorManager.h  TemperatureSimulator.cpp  TemperatureSimulator.h
src/utils/: Types.cpp  Types.h
